--- a/feBuilderV2/feBuilderV2.vcxproj
+++ b/feBuilderV2/feBuilderV2.vcxproj
@@ -184,6 +184,9 @@
     <Image Include="icon1.ico" />
     <Image Include="icon2.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
