--- a/feBuilderV2/feBuilderV2.vcxproj.filters
+++ b/feBuilderV2/feBuilderV2.vcxproj.filters
@@ -62,9 +62,6 @@
     <ClInclude Include="Stat.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Stats.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Student.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -102,6 +99,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StudentList.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="StatsTemplate.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CharacterStats.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
